--- a/yottalens.cabal
+++ b/yottalens.cabal
@@ -1,8 +1,8 @@
-name:                yottalens
+name:                yoctolens
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/yottalens#readme
+homepage:            https://github.com/githubuser/yoctolens#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Matthew Chan
@@ -15,19 +15,19 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Control.Lens.Yotta
+  exposed-modules:     Control.Lens.Yocto
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
-test-suite yottalens-test
+test-suite yoctolens-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , yottalens
+                     , yoctolens
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/themattchan/yottalens
+  location: https://github.com/themattchan/yoctolens
